--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,5 +9,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2
     - name: Build with Maven
       run: mvn test --file *.pom
