--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn test -file PracticeProject/pom.xml
+      run: mvn test -Denv={{github.event.inputs.name}} -file PracticeProject/pom.xml
     - name: Deploy automation report
       uses: actions/upload-artifact@v3
       with:
