--- a/PracticeProject/pom.xml
+++ b/PracticeProject/pom.xml
@@ -43,6 +43,14 @@
 	</dependencies>	
 	<build>
          <plugins>
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+		       <release>11</release>
+		 </configuration>
+	    </plugin>    
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
@@ -52,7 +60,8 @@
                      <suiteXmlFile>suite.xml</suiteXmlFile>
                   </suiteXmlFiles>
                </configuration>
-            </plugin>     
+            </plugin>  
+		 
          </plugins>
       </build>
 </project>
