--- a/.github/workflows/fetch_run_jar_file.yml
+++ b/.github/workflows/fetch_run_jar_file.yml
@@ -22,18 +22,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 8
-      uses: actions/setup-java@v3
+    - name: Download a single artifact
+      uses: actions/download-artifact@v3
+
       with:
-        java-version: '8'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn test -Denv=${{github.event.inputs.env}},${{github.event.inputs.suite_name}},${{github.event.inputs.server}},${{secrets.USERNAME}} -file PracticeProject/pom.xml
-    - name: Deploy automation report
-      uses: actions/upload-artifact@v3
-      with:
-        name: TestExecutionReport.html
-        path: PracticeProject/reports/TestExecutionReport.html
-        retention-days: 2
+        name: Test-Jar
+        path: TestProject/actions/runs/3502980828
+     
