--- a/PracticeProject/pom.xml
+++ b/PracticeProject/pom.xml
@@ -62,6 +62,18 @@
                   </suiteXmlFiles>
                </configuration>
             </plugin>  
+	    <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-jar-plugin</artifactId>
+		<configuration>
+		    <archive>
+		       <manifest>
+				<addClasspath>true</addClasspath>
+				<mainClass>com.example.demo.PracticeProject.MainRunner</mainClass>
+			</manifest>
+		</archive>
+		</configuration>
+	   </plugin>
 		 
          </plugins>
       </build>
